@@ -2,12 +2,12 @@
 
 /**
  * Smarty Internal Plugin Data
- * 
+ *
  * This file contains the basic classes and methodes for template and variable creation
- * 
+ *
  * @package Smarty
  * @subpackage Template
- * @author Uwe Tews 
+ * @author Uwe Tews
  */
 
 /**
@@ -20,10 +20,10 @@ class Smarty_Internal_Data {
     public $tpl_vars = array();
     public $parent = null;
     public $config_vars = array();
-    
+
     /**
      * assigns a Smarty variable
-     * 
+     *
      * @param array $ |string $tpl_var the template variable name(s)
      * @param mixed $value the value to assign
      * @param boolean $nocache if true any output of this variable will be not cached
@@ -40,8 +40,8 @@ class Smarty_Internal_Data {
                     } else {
                         $this->tpl_vars[$_key] = new Smarty_variable($_val, $nocache);
                     }
-                } 
-            } 
+                }
+            }
         } else {
             if ($tpl_var != '') {
                 if (isset($this->tpl_vars[$tpl_var])) {
@@ -50,12 +50,12 @@ class Smarty_Internal_Data {
                 } else {
                     $this->tpl_vars[$tpl_var] = new Smarty_variable($value, $nocache);
                 }
-            } 
-        } 
-    } 
+            }
+        }
+    }
     /**
      * assigns a global Smarty variable
-     * 
+     *
      * @param string $varname the global variable name
      * @param mixed $value the value to assign
      * @param boolean $nocache if true any output of this variable will be not cached
@@ -64,11 +64,11 @@ class Smarty_Internal_Data {
     {
         if ($varname != '') {
             Smarty::$global_tpl_vars[$varname] = new Smarty_variable($value, $nocache);
-        } 
-    } 
+        }
+    }
     /**
      * assigns values to template variables by reference
-     * 
+     *
      * @param string $tpl_var the template variable name
      * @param mixed $ &$value the referenced value to assign
      * @param boolean $nocache if true any output of this variable will be not cached
@@ -78,12 +78,12 @@ class Smarty_Internal_Data {
         if ($tpl_var != '') {
             $this->tpl_vars[$tpl_var] = new Smarty_variable(null, $nocache);
             $this->tpl_vars[$tpl_var]->value = &$value;
-        } 
-    } 
+        }
+    }
 
     /**
      * appends values to template variables
-     * 
+     *
      * @param array $ |string $tpl_var the template variable name(s)
      * @param mixed $value the value to append
      * @param boolean $merge flag if array elements shall be merged
@@ -101,20 +101,20 @@ class Smarty_Internal_Data {
                             $this->tpl_vars[$_key] = new Smarty_variable(null, $nocache);
                         } else {
                             $this->tpl_vars[$_key] = clone $tpl_var_inst;
-                        } 
-                    } 
+                        }
+                    }
                     if (!(is_array($this->tpl_vars[$_key]->value) || $this->tpl_vars[$_key]->value instanceof ArrayAccess)) {
                         settype($this->tpl_vars[$_key]->value, 'array');
-                    } 
+                    }
                     if ($merge && is_array($_val)) {
                         foreach($_val as $_mkey => $_mval) {
                             $this->tpl_vars[$_key]->value[$_mkey] = $_mval;
-                        } 
+                        }
                     } else {
                         $this->tpl_vars[$_key]->value[] = $_val;
-                    } 
-                } 
-            } 
+                    }
+                }
+            }
         } else {
             if ($tpl_var != '' && isset($value)) {
                 if (!isset($this->tpl_vars[$tpl_var])) {
@@ -123,25 +123,25 @@ class Smarty_Internal_Data {
                         $this->tpl_vars[$tpl_var] = new Smarty_variable(null, $nocache);
                     } else {
                         $this->tpl_vars[$tpl_var] = clone $tpl_var_inst;
-                    } 
-                } 
+                    }
+                }
                 if (!(is_array($this->tpl_vars[$tpl_var]->value) || $this->tpl_vars[$tpl_var]->value instanceof ArrayAccess)) {
                     settype($this->tpl_vars[$tpl_var]->value, 'array');
-                } 
+                }
                 if ($merge && is_array($value)) {
                     foreach($value as $_mkey => $_mval) {
                         $this->tpl_vars[$tpl_var]->value[$_mkey] = $_mval;
-                    } 
+                    }
                 } else {
                     $this->tpl_vars[$tpl_var]->value[] = $value;
-                } 
-            } 
-        } 
-    } 
+                }
+            }
+        }
+    }
 
     /**
      * appends values to template variables by reference
-     * 
+     *
      * @param string $tpl_var the template variable name
      * @param mixed $ &$value the referenced value to append
      * @param boolean $merge flag if array elements shall be merged
@@ -151,23 +151,23 @@ class Smarty_Internal_Data {
         if ($tpl_var != '' && isset($value)) {
             if (!isset($this->tpl_vars[$tpl_var])) {
                 $this->tpl_vars[$tpl_var] = new Smarty_variable();
-            } 
+            }
             if (!@is_array($this->tpl_vars[$tpl_var]->value)) {
                 settype($this->tpl_vars[$tpl_var]->value, 'array');
-            } 
+            }
             if ($merge && is_array($value)) {
                 foreach($value as $_key => $_val) {
                     $this->tpl_vars[$tpl_var]->value[$_key] = &$value[$_key];
-                } 
+                }
             } else {
                 $this->tpl_vars[$tpl_var]->value[] = &$value;
-            } 
-        } 
-    } 
+            }
+        }
+    }
 
     /**
      * Returns a single or all template variables
-     * 
+     *
      * @param string $varname variable name or null
      * @return string variable value or or array of variables
      */
@@ -179,7 +179,7 @@ class Smarty_Internal_Data {
                 return $_var->value;
             } else {
                 return null;
-            } 
+            }
         } else {
             $_result = array();
             if ($_ptr === null) {
@@ -189,28 +189,28 @@ class Smarty_Internal_Data {
                     if (!array_key_exists($key, $_result)) {
                         $_result[$key] = $var->value;
                     }
-                } 
+                }
                 // not found, try at parent
                 if ($search_parents) {
                     $_ptr = $_ptr->parent;
                 } else {
                     $_ptr = null;
-                } 
-            } 
+                }
+            }
             if ($search_parents && isset(Smarty::$global_tpl_vars)) {
                 foreach (Smarty::$global_tpl_vars AS $key => $var) {
                     if (!array_key_exists($key, $_result)) {
                         $_result[$key] = $var->value;
                     }
-                } 
-            } 
+                }
+            }
             return $_result;
-        } 
-    } 
+        }
+    }
 
     /**
      * clear the given assigned template variable.
-     * 
+     *
      * @param string $ |array $tpl_var the template variable(s) to clear
      */
     public function clearAssign($tpl_var)
@@ -218,11 +218,11 @@ class Smarty_Internal_Data {
         if (is_array($tpl_var)) {
             foreach ($tpl_var as $curr_var) {
                 unset($this->tpl_vars[$curr_var]);
-            } 
+            }
         } else {
             unset($this->tpl_vars[$tpl_var]);
-        } 
-    } 
+        }
+    }
 
     /**
      * clear all the assigned template variables.
@@ -230,24 +230,24 @@ class Smarty_Internal_Data {
     public function clearAllAssign()
     {
         $this->tpl_vars = array();
-    } 
+    }
 
     /**
      * load a config file, optionally load just selected sections
-     * 
+     *
      * @param string $config_file filename
      * @param mixed $sections array of section names, single section or null
      */
     public function configLoad($config_file, $sections = null)
-    { 
+    {
         // load Config class
         $config = new Smarty_Internal_Config($config_file, $this->smarty, $this);
         $config->loadConfigVars($sections);
-    } 
+    }
 
     /**
      * gets the object of a Smarty variable
-     * 
+     *
      * @param string $variable the name of the Smarty variable
      * @param object $_ptr optional pointer to data object
      * @param boolean $search_parents search also in parent data
@@ -261,27 +261,27 @@ class Smarty_Internal_Data {
             if (isset($_ptr->tpl_vars[$_variable])) {
                 // found it, return it
                 return $_ptr->tpl_vars[$_variable];
-            } 
+            }
             // not found, try at parent
             if ($search_parents) {
                 $_ptr = $_ptr->parent;
             } else {
                 $_ptr = null;
-            } 
-        } 
+            }
+        }
         if (isset(Smarty::$global_tpl_vars[$_variable])) {
             // found it, return it
             return Smarty::$global_tpl_vars[$_variable];
-        } 
+        }
         if ($this->smarty->error_unassigned && $error_enable) {
 			// force a notice
 			$x = $$_variable;
         }
 		return new Undefined_Smarty_Variable;
-    } 
+    }
     /**
      * gets  a config variable
-     * 
+     *
      * @param string $variable the name of the config variable
      * @return mixed the value of the config variable
      */
@@ -292,20 +292,20 @@ class Smarty_Internal_Data {
             if (isset($_ptr->config_vars[$_variable])) {
                 // found it, return it
                 return $_ptr->config_vars[$_variable];
-            } 
+            }
             // not found, try at parent
             $_ptr = $_ptr->parent;
-        } 
+        }
         if ($this->smarty->error_unassigned) {
 			// force a notice
 			$x = $$_variable;
 		}
 		return null;
-    } 
+    }
 
     /**
      * gets  a stream variable
-     * 
+     *
      * @param string $variable the stream of the variable
      * @return mixed the value of the stream variable
      */
@@ -313,23 +313,23 @@ class Smarty_Internal_Data {
     {
         $_result = '';
         if ($fp = fopen($variable, 'r+')) {
-            while (!feof($fp)) {
-                $_result .= fgets($fp);
-            } 
+            while (!feof($fp) && ($current_line = fgets($fp)) !== false ) {
+                $_result .= $current_line;
+            }
             fclose($fp);
             return $_result;
-        } 
+        }
 
         if ($this->smarty->error_unassigned) {
             throw new SmartyException('Undefined stream variable "' . $variable . '"');
         } else {
             return null;
-        } 
-    } 
+        }
+    }
 
     /**
      * Returns a single or all config variables
-     * 
+     *
      * @param string $varname variable name or null
      * @return string variable value or or array of variables
      */
@@ -345,24 +345,24 @@ class Smarty_Internal_Data {
                 }
             } else {
             	$var_array = array_merge($_ptr->config_vars, $var_array);
-        	} 
+        	}
              // not found, try at parent
             if ($search_parents) {
                 $_ptr = $_ptr->parent;
             } else {
                 $_ptr = null;
-            } 
-    	} 
+            }
+    	}
         if (isset($varname)) {
     		return '';
         } else {
             return $var_array;
-        } 
-    } 
+        }
+    }
 
     /**
      * Deassigns a single or all config variables
-     * 
+     *
      * @param string $varname variable name or null
      */
     function clearConfig($varname = null)
@@ -373,16 +373,16 @@ class Smarty_Internal_Data {
         } else {
             $this->config_vars = array();
             return;
-        } 
-    } 
+        }
+    }
 
-} 
+}
 
 /**
  * class for the Smarty data object
- * 
+ *
  * The Smarty data object will hold Smarty variables in the current scope
- * 
+ *
  * @param object $parent tpl_vars next higher level of Smarty variables
  */
 class Smarty_Data extends Smarty_Internal_Data {
@@ -401,15 +401,15 @@ class Smarty_Data extends Smarty_Internal_Data {
             // set up variable values
             foreach ($_parent as $_key => $_val) {
                 $this->tpl_vars[$_key] = new Smarty_variable($_val);
-            } 
+            }
         } elseif ($_parent != null) {
             throw new SmartyException("Wrong type for template variables");
-        } 
-    } 
-} 
+        }
+    }
+}
 /**
  * class for the Smarty variable object
- * 
+ *
  * This class defines the Smarty variable object
  */
 class Smarty_Variable {
@@ -419,7 +419,7 @@ class Smarty_Variable {
     public $scope;
     /**
      * create Smarty variable object
-     * 
+     *
      * @param mixed $value the value to assign
      * @param boolean $nocache if true any output of this variable will be not cached
      * @param boolean $scope the scope the variable will have  (local,parent or root)
@@ -429,17 +429,17 @@ class Smarty_Variable {
         $this->value = $value;
         $this->nocache = $nocache;
         $this->scope = $scope;
-    } 
+    }
 
     public function __toString ()
     {
         return $this->value;
-    } 
-} 
+    }
+}
 
 /**
  * class for undefined variable object
- * 
+ *
  * This class defines an object for undefined variable handling
  */
 class Undefined_Smarty_Variable {
@@ -450,8 +450,8 @@ class Undefined_Smarty_Variable {
             return false;
         } else {
             return null;
-        } 
-    } 
-} 
+        }
+    }
+}
 
 ?>
